src/objects/AccountLink__c.object
<CustomObject>
    <description>To create a lookup to Account object with filters.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3) OR (4 AND (5 OR 6 OR 7))</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External organisation</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Alzheimer&apos;s Trading Ltd Accounts</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>startsWith</operation>
                <value>Alzheimer&apos;s Trading</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>equals</operation>
                <value>IT Administrator</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>CRS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountLinks</relationshipLabel>
        <relationshipName>AccountLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>Locality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountLinks (Locality)</relationshipLabel>
        <relationshipName>AccountLinks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>service_type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer Support &amp; Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day care and support (establishment based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Support &amp; Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home facilities &amp; services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered home care and support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and Advice (Dementia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and Advice (Financial &amp; Legal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle &amp; Wellbeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (one to one)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer support group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential/nursing home care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing for the Brain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community support service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AccountLink</label>
    <nameField>
        <label>AccountLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>